--- a/QuickBuy.Angular/ClientApp/angular.json
+++ b/QuickBuy.Angular/ClientApp/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "QuickBuy.Angular": {
+    "WebApplication3": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -52,18 +52,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "QuickBuy.Angular:build"
+            "browserTarget": "WebApplication3:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "QuickBuy.Angular:build:production"
+              "browserTarget": "WebApplication3:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "QuickBuy.Angular:build"
+            "browserTarget": "WebApplication3:build"
           }
         },
         "test": {
@@ -122,7 +122,7 @@
         }
       }
     },
-    "QuickBuy.Angular-e2e": {
+    "WebApplication3-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -130,7 +130,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "QuickBuy.Angular:serve"
+            "devServerTarget": "WebApplication3:serve"
           }
         },
         "lint": {
@@ -145,5 +145,5 @@
       }
     }
   },
-  "defaultProject": "QuickBuy.Angular"
+  "defaultProject": "WebApplication3"
 }
