--- a/QuickBuy.Angular/appsettings.json
+++ b/QuickBuy.Angular/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "QuickByConnection": "server=localhost;userid=root;password=mysql@2019;database=QuickBuyAngularDB"
+  }
 }
