--- a/QuickBuy.Angular/config.json
+++ b/QuickBuy.Angular/config.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "QuickByConnection": "server=localhost;userid=root;password=mysql@2019;database=QuickBuyAngularDB"
+    "QuickByConnection": "server=localhostXXX;userid=root;password=mysql@2019;database=QuickBuyAngularDB"
   }
 }
