Criação guarda rotas e menu sair

--- a/QuickBuy.Angular/QuickBuy.Angular.csproj
+++ b/QuickBuy.Angular/QuickBuy.Angular.csproj
@@ -29,6 +29,7 @@
     <None Remove="ClientApp\src\app\modelo\Usuario.ts" />
     <None Remove="ClientApp\src\app\produto\produto.component.ts" />
     <None Remove="ClientApp\src\app\usuario\login\login.component.ts" />
+    <None Remove="ClientApp\src\app\autorizacao\guarda.rotas.ts" />
   </ItemGroup>
 
   <ItemGroup>
@@ -39,6 +40,7 @@
     <TypeScriptCompile Include="ClientApp\src\app\modelo\usuario.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\produto\produto.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\usuario\login\login.component.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\autorizacao\guarda.rotas.ts" />
   </ItemGroup>
 
   <ItemGroup>
