--- a/QuickBuy.Repositorio/QuickBuy.Repositorio.csproj
+++ b/QuickBuy.Repositorio/QuickBuy.Repositorio.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20191218173324_AddNomeArquivoTableProduto.cs" />
+    <Compile Remove="Migrations\20191218173324_AddNomeArquivoTableProduto.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.0">
       <PrivateAssets>all</PrivateAssets>
