finalização listagem de produtos

--- a/QuickBuy.Angular/appsettings.json
+++ b/QuickBuy.Angular/appsettings.json
@@ -6,6 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "QuickByConnection": "server=localhost;userid=root;password=mysql@2019;database=QuickBuyAngularDB"
+    "QuickByConnection": "server=localhost;userid=root;password=mysql@2019;database=QuickBuyAngularDB",
+    "QuickRemoteMysql": "server=remotemysql.com;userid=Esl0DUju6W;password=DE3RKKoha9;database=Esl0DUju6W"
   }
 }
