--- a/GroceryShop.Angular/ClientApp/package.json
+++ b/GroceryShop.Angular/ClientApp/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.1.10",
+    "@angular/animations": "^6.1.10",
     "@angular/common": "6.1.10",
     "@angular/compiler": "6.1.10",
     "@angular/core": "6.1.10",
@@ -23,13 +23,14 @@
     "@angular/platform-server": "6.1.10",
     "@angular/router": "6.1.10",
     "@nguniversal/module-map-ngfactory-loader": "6.0.0",
-    "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
+    "core-js": "^2.5.4",
     "jquery": "3.3.1",
-    "popper.js": "^1.14.3"
+    "ngx-toastr": "^10.1.0",
+    "popper.js": "^1.14.3",
+    "rxjs": "^6.0.0",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.0",
